--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "Harut Grigoryan",
-            "email": "haroutweb@gmail.com",
+            "email": "haroutweb@gmail.com"
         }
     ],
     "require": {
