--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "haroutweb/safan-framework",
-    "description": "The Symfony PHP framework",
+    "description": "Simple Application for all needs",
     "keywords": ["framework"],
     "authors": [
         {
